# omnibrain

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  EVOLUTION_PLAN.md  MASTERPLAN.md  Makefile  README.md  compose.yaml  pyproject.toml  run.sh
.github/workflows/: ci.yml
docker/: supervisord.conf
docs/: SKILL-DEVELOPER-GUIDE.md
marketplace/: registry.json
scripts/: install.sh  omnibrain.service  setup_google.py
skills/: README.md
skills/calendar-assistant/: skill.yaml
skills/calendar-assistant/handlers/: ask.py  event.py  poll.py
skills/email-manager/: skill.yaml
skills/email-manager/handlers/: ask.py  event.py  poll.py
skills/memory-search/: skill.yaml
skills/memory-search/handlers/: ask.py
skills/morning-briefing/: skill.yaml
skills/morning-briefing/handlers/: ask.py  poll.py
skills/pattern-detector/: skill.yaml
skills/pattern-detector/handlers/: ask.py  poll.py
skills/template/: README.md  skill.yaml
skills/template/handlers/: ask.py  event.py  poll.py
skills/template/tests/: test_handlers.py
src/omnibrain/: __init__.py  __main__.py  agent_tools.py  approval.py  brain.py  briefing.py  chat_tools.py  config.py  context_resurrection.py  conversation_extractor.py  daemon.py  db.py  demo_data.py  disclosure.py  extractors.py  graph.py  knowledge_graph.py  memory.py  models.py  preference_model.py  profile.py  prompt_injection.py  review_engine.py  secure_storage.py  share_card.py  skill_cli.py  skill_context.py  skill_runtime.py  skill_sandbox.py  transparency.py
src/omnibrain/auth/: __init__.py  google_oauth.py  onboarding.py
src/omnibrain/integrations/: __init__.py  calendar.py  gmail.py
src/omnibrain/interfaces/: __init__.py  agent_chat_bridge.py  api_models.py  api_server.py  telegram_bot.py
src/omnibrain/knowledge/: README.md
src/omnibrain/proactive/: __init__.py  engine.py  patterns.py  scorer.py
src/omnibrain/prompts/: briefing.md  chat_system.md  email_triage.md  meeting_prep.md  system.md
src/omnibrain/tools/: __init__.py  calendar_tools.py  email_tools.py  memory_tools.py
src/omnigent/: __init__.py  agent.py  chains.py  config.py  context.py  cost_tracker.py  error_recovery.py  extractors.py  few_shot_examples.py  knowledge_loader.py  logging_config.py  planner.py  plugins.py  reasoning_graph.py  reflection.py  router.py  session.py  state.py
src/omnigent/tools/: __init__.py
tests/: test_api.py  test_approval.py  test_brain.py  test_briefing.py  test_briefing_skill.py  test_calendar.py  test_calendar_skill.py  test_cli.py  test_context.py  test_context_atomic.py  test_context_resurrection.py  test_daemon_wiring.py  test_email_skill.py  test_gdpr_routes.py  test_gmail.py  test_google_oauth.py  test_integration_flows.py  test_knowledge_graph.py  test_memory.py  test_memory_search_skill.py  test_model_serialization.py  test_new_endpoints.py  test_onboarding.py  test_pattern_skill.py  test_patterns.py  test_preference_model.py  test_priority_scorer.py  test_proactive.py  test_prompt_injection.py  test_registries.py  test_review_engine.py  test_session.py  test_skill_cli.py  test_skill_context.py  test_skill_runtime.py  test_skill_sandbox.py  test_state.py  test_telegram.py  test_transparency.py
web/: README.md  middleware.ts  next.config.ts  package-lock.json  package.json
web/app/: error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx
web/app/briefing/: page.tsx
web/app/chat/: page.tsx
web/app/contacts/: page.tsx
web/app/knowledge/: page.tsx
web/app/manifesto/: page.tsx
web/app/settings/: page.tsx
web/app/skills/: page.tsx
web/app/timeline/: page.tsx
web/app/transparency/: page.tsx
web/hooks/: useHotkeys.tsx  useNavigate.tsx  useOnlineStatus.ts  useWebSocket.ts
web/lib/: api.ts  store.ts
web/public/: robots.txt  site.webmanifest
(+35 files in other folders)
